# compiler-potpourri

./: Makefile  README.md
ssa/: .ocamlinit  Makefile  def_use_chain.ml  def_use_chain.mli  dune  examples  optim.ml  optim.mli  pow.hir  reachability.ml  sccp.ml  ssa.ml  ssa.mli  sscp.ml  test_optim.ml  test_reachability.ml  test_sccp.ml  test_ssa.ml  test_sscp.ml  utils.ml  utils.mli  value_numbering.ml  value_numbering.mli
ssa/analysis/test/: dune  expect.ml  fastpow.out.expect  fastsum.out.expect  fib.out.expect  fib_001.out.expect  pow.out.expect  pow_001.out.expect  search.out.expect  sort.out.expect  sum.out.expect  test01.out.expect  test01_001.out.expect  test02.out.expect  test03.out.expect  test03_001.out.expect  test04.out.expect  test05.out.expect  test05_001.out.expect  test06.out.expect  test06_001.out.expect  test06_002.out.expect  test06_003.out.expect  test06_004.out.expect  test06_005.out.expect  test06_006.out.expect  test07.out.expect  test08.out.expect  (+2 more)
ssa/test/: dune  expect.ml  fastpow.out.expect  fastsum.out.expect  fib.out.expect  fib_001.out.expect  pow.out.expect  pow_001.out.expect  search.out.expect  sort.out.expect  sum.out.expect  test.out.expect  test01.out.expect  test01_001.out.expect  test02.out.expect  test03.out.expect  test03_001.out.expect  test04.out.expect  test05.out.expect  test05_001.out.expect  test06.out.expect  test06_001.out.expect  test06_002.out.expect  test06_003.out.expect  test06_004.out.expect  test06_005.out.expect  test06_006.out.expect  test07.out.expect  test08.out.expect  test09.out.expect  test10.out.expect
(+571 files in other folders)
