(library
  (name ssa)
  (public_name ssa)
  (modules def_use_chain value_numbering ssa utils)
  (libraries control_flow))

(library
  (name optim)
  (public_name optim)
  (modules optim)
  (libraries ssa))

(executable
  (name test_ssa)
  (modules test_ssa)
  (libraries ssa optim))

(executable
  (name test_optim)
  (modules test_optim)
  (libraries ssa optim))

(executable
  (name test_sscp)
  (modules test_sscp sscp)
  (libraries ssa))

(executable
  (name test_sccp)
  (modules test_sccp sccp)
  (libraries ssa))

(executable
  (name test_reachability)
  (modules test_reachability reachability)
  (libraries ssa))
