;; --- Libraries ---

(library
  (name ssa)
  (public_name ssa)
  (modules def_use_chain value_numbering ssa)
  (libraries control_flow))

(library
  (name analysis)
  (public_name analysis)
  (modules reachability sscp sccp)
  (libraries ssa))

(library
  (name optim)
  (public_name optim)
  (modules optim)
  (libraries ssa analysis))

;; --- Executables ---

(executable
  (name test_ssa)
  (modules test_ssa)
  (libraries ssa))

(executable
  (name test_optim)
  (modules test_optim)
  (libraries ssa optim))

(executable
  (name test_reachability)
  (modules test_reachability)
  (libraries ssa analysis))

(executable
  (name test_sscp)
  (modules test_sscp)
  (libraries ssa analysis))

(executable
  (name test_sccp)
  (modules test_sccp)
  (libraries ssa analysis))
